--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "combatwombat",
-  "version": "0.0.0",
+  "name": "combat-wombat",
+  "version": "1.0.0",
+  "homepage": "https://schmengler.github.io/combat-wombat",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "tsc && vite build --base=/combat-wombat/",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
