--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.19",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "vite-plugin-pwa": "^0.11.13",
+    "workbox-precaching": "^6.4.2"
   }
 }
